# qoraal-flash

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build_and_run.bat  build_and_run.sh  log.sh  reg.sh
include/qoraal-flash/: config.h  qoraal.h  regenum.h  registry.h  syslog.h
include/qoraal-flash/nvram/: nlog2.h  nvol3.h  nvram.h
src/: CMakeLists.txt  qoraal.c  regenum.c  registry.c  syslog.c
src/nvram/: nlog2.c  nvol3.c  nvram.c
src/qshell/: registrycmd.c  syslogcmd.c
test/: CMakeLists.txt  main.c  platform.c  system.c
test/platform/: platform.c  platform.h
test/services/: services.h  shell.c
zephyr/: CMakeLists.txt  Kconfig  module.yml
